--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-width: auto;
+    scrollbar-color: #fb626b #F8DAD0;
+  }
+
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 12px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: #F8DAD0;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: #fb626b;
+    border-radius: 10px;
+    border: 2px solid #F8DAD0;
+  }
